--- a/otherOption.html
+++ b/otherOption.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <script type="text/javascript" src="rock-paper-scissors.js"></script>
-<title>lol shizzle</title>
+<title>sweksite</title>
 </head>
 <body>
 
