--- a/stats.html
+++ b/stats.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script type="text/javascript" src="lolapi.js"></script>
-<title>lol shizzle</title>
+<title>sweksite</title>
 </head>
 <body>
 
@@ -18,26 +18,29 @@
     </ul>
   </div>
   <div class="content">
+    <!--part 1 -->
     <br />Summoner Name:
     <br />
     <input id="userName" />
-    <input type="submit" onclick="summonerLookUp();" />
+    <button type="submit" onclick="summonerLookUp();" >Go!</button>
     <br />
+    <br />
+    <span id="sName"></span>
     <br />Summoner Level: <span id="sLevel"></span>
-
+    <br />Summoner PrevisionDate: <span id="sPrevisionDate"></span>
+    <br />Summoner ProfileIconId: <span id="sProfileIconId"></span>
     <br />Summoner ID: <span id="sID"></span>
     <br />
     <br />
     <hr />
+    <!--part 2 -->
+    <br />Summoner Id:
     <br />
-    summoner Id:
-    <br />
-    <input id="summonerId" />
+    <input id="SummonerId" />
     <button type="submit" onclick="Name();">Summoner Id</button>
     <br />
-    <br />Summoner Level: <span id="sLevel"></span>
 
-    <br />Summoner Name: <span id="sID"></span>
+    <br />Summoner something: <span id="someStat"></span>
     <br />
     <br />
     <hr />
