--- a/r-p-s-l-s.html
+++ b/r-p-s-l-s.html
@@ -11,7 +11,7 @@
      <ul>
       <li><a href="home.html">home</a></li>
       <li><a href="stats.html">stats</a></li>
-      <li><a href="compare.html">compare</a></li>
+      <li><a href="nextOption.html">compare</a></li>
       <li><a href="otherOption.html">rock-paper-scissors</a></li>
 	    <li class="currentPage">rock-paper-scissors-lizard-spock</li>
     </ul>
