total ranked death done

--- a/stats.html
+++ b/stats.html
@@ -40,7 +40,7 @@
     <button type="submit" onclick="Name();">Summoner Id</button>
     <br />
 
-    <br />Summoner something: <span id="someStat"></span>
+    <br />Total death ranked: <span id="someStat"></span>
     <br />
     <br />
     <hr />
