penta,quadra,triple options added

--- a/stats.html
+++ b/stats.html
@@ -39,8 +39,10 @@
     <input id="SummonerId" />
     <button type="submit" onclick="Name();">Summoner Id</button>
     <br />
-
-    <br />Total death ranked: <span id="someStat"></span>
+    <br />Total deaths ranked: <span id="someStat"></span>
+    <br />Total pentas ranked: <span id="sPenta"></span>
+    <br />Total quadras ranked: <span id="sQuadra"></span>
+    <br />Total triples ranked: <span id="sTriple"></span>
     <br />
     <br />
     <hr />
